[package]
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
edition = "2021"
name = "pest-site"
version = "0.1.0"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
pest = "2.7"
pest_fmt = "0.2"
pest_meta = "2.6"
pest_vm = "2.6"
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  "Window",
  "Document",
  "Text",
  "DomTokenList",
  "HtmlOptionElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlCollection",
  "InputEvent",
]
version = "0.3"
