[package]
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
edition = "2021"
name = "pest-site"
version = "0.1.0"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
pest = "2.8.0"
pest_fmt = "0.2.5"
pest_meta = { version = "2.8.0", features = ["grammar-extras"] }
pest_vm = { version = "2.8.0", features = ["grammar-extras"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  "Window",
  "Document",
  "Text",
  "DomTokenList",
  "HtmlOptionElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlCollection",
  "InputEvent",
  "Storage",
]
version = "0.3"
